<resources>
    <string name="app_name">Don\'t be</string>
    <string name="menu_item_home">홈</string>
    <string name="menu_item_posting">글쓰기</string>
    <string name="menu_item_notification">알림</string>
    <string name="menu_item_my">마이</string>
    <string name="appbar_cancel">취소</string>
    <string name="login_description">온화한 커뮤니티\nDON\'T BE에서 만나요.</string>
    <string name="sign_up_appbar_title">회원가입</string>
    <string name="error_sign_in_mesaage">재가입은 30일 이후에 가능합니다.</string>
    <string name="posting_appbar_title">새로운 글</string>
    <string name="posting_content_hint">어떤 생각을 하고 있나요?</string>
    <string name="posting_btn">게시</string>
    <string name="et_posting_link_hint">URL</string>
    <string name="tv_posting_link_error">아직 링크로 인식되지 않아요. 다시 확인해 주세요.</string>
    <string name="tv_posting_link_count_error">링크는 한 개까지만 삽입할 수 있어요.</string>
    <string name="tv_posting_text_count">(0/500)</string>
    <string name="posting_text_count">(%1$d/500)</string>
    <string name="notification_appbar_title">알림</string>
    <string name="notification_feed_content_liked">님이 회원님의 글을 좋아합니다.</string>
    <string name="notification_feed_comment">님이 회원님의 글에 답글을 작성했습니다.</string>
    <string name="notification_feed_comment_liked">님이 회원님의 답글을 좋아합니다.</string>
    <string name="notification_feed_acting_continue">님, 이제 다시 글을 작성할 수 있어요! 오랜만에 돈비에 인사를 남겨주세요!</string>
    <string name="notification_feed_be_ghost">님, 투명해져서 당분간 글을 작성할 수 없어요.</string>
    <string name="notification_feed_content_ghost">님, 작성하신 게시글로 인해 점점 투명해지고 있어요.</string>
    <string name="notification_feed_comment_ghost">님, 작성하신 답글로 인해 점점 투명해지고 있어요.</string>
    <string name="notification_feed_user_ban">님 커뮤니티 활동 정책 위반으로 더 이상 돈비를 이용할 수 없어요. 자세한 내용은 문의 사항을 남겨주세요.</string>
    <string name="notification_empty_non">아직 받은 알림이 없어요.</string>
    <string name="notification_empty_new">새로운 소식이 도착하면 알려드릴게요.</string>
    <string name="notification_feed_popular_writer">"님이 작성하신 글이 인기글로 선정되었어요.\uD83E\uDD73\uD83E\uDD73"</string>
    <string name="notification_feed_popular_content">"어제 가장 인기있었던 글이에요.\n: "</string>
    <string name="feed_time_now">지금</string>
    <string name="feed_time_minute">분 전</string>
    <string name="feed_time_hour">시간 전</string>
    <string name="feed_time_day">일 전</string>
    <string name="feed_time_week">주 전</string>
    <string name="feed_time_month">달 전</string>
    <string name="feed_time_year">년 전</string>
    <string name="posting_delete_dialog">작성한 글을 삭제하시겠어요?</string>
    <string name="delete_dialog_cancel">취소</string>
    <string name="delete_dialog_delete">삭제</string>
    <string name="comment_delete_dialog">작성한 답글을 삭제하시겠어요?</string>
    <string name="content_description_iv_onboarding_back">뒤로가기 입니다.</string>
    <string name="btn_onboarding_next">다음으로</string>
    <string name="btn_onboarding_start">시작하기</string>
    <string name="tv_onboarding_skip">건너뛰기</string>
    <string name="tv_onboarding_first_title">DON\'T BE를\n 찾아주셔서 감사해요.</string>
    <string name="content_description_iv_onboarding_first">온보딩 첫번째 사진입니다.</string>
    <string name="tv_onboarding_second_subtitle">DON\'T BE는</string>
    <string name="tv_onboarding_second_title">차별, 혐오, 비난에서\n 자유로운 커뮤니티예요.</string>
    <string name="content_description_iv_onboarding_second">온보딩 두번째 사진입니다.</string>
    <string name="tv_onboarding_third_title">표현의 자유를 남용하는 유저는</string>
    <string name="tv_onboarding_third_title_gradient">점점 투명해져요.</string>
    <string name="content_description_iv_onboarding_third">온보딩 세번째 사진입니다.</string>
    <string name="tv_onboarding_fourth_title">DON\'T BE에\n 첫 인사를 남겨볼까요?</string>
    <string name="et_onboarding_fourth_introduction">한문장으로 소개를 남겨주세요!</string>
    <string name="tv_onboarding_fourth_description">작성한 첫 인사는 한 줄 소개뿐만 아니라\n게시글로 함께 업로드돼요.</string>
    <string name="sign_up_agree_title">약관동의</string>
    <string name="sign_up_agree_description">DON’T BE와 함께하기 전\n필요한 약관들을 확인해주세요!</string>
    <string name="sign_up_agree_choose_all">전체선택</string>
    <string name="sign_up_agree_child_1">이용약관 동의</string>
    <string name="sign_up_agree_must">필수</string>
    <string name="sign_up_agree_child_2">개인정보 수집 및 이용동의</string>
    <string name="sign_up_agree_child_3">만 14세 이상입니다</string>
    <string name="sign_up_agree_child_4">마케팅 활용 / 광고성 정보 수신동의</string>
    <string name="sign_up_agree_choose">선택</string>
    <string name="sign_up_profile_nickname">닉네임</string>
    <string name="sign_up_profile_edit_hint">닉네임을 입력해주세요</string>
    <string name="sign_up_profile_double_check">중복확인</string>
    <string name="sign_up_profile_check_text">*중복된 닉네임인지 확인해주세요.</string>
    <string name="sign_up_profile_use_posssible">*사용 가능한 닉네임입니다.</string>
    <string name="sign_up_profile_use_impossible">*사용 불가능한 닉네임입니다.</string>
    <string name="sign_up_profile_correct_check">*공백 없이 한글 영어 포함 12자 이내로 작성해 주세요.</string>
    <string name="sign_up_profile_one_introduce">한 줄 소개</string>
    <string name="sign_up_profile_description">한 줄로 자신을 소개해주세요.</string>
    <string name="sign_up_profile_completed">완료하기</string>
    <string name="sign_up_profile_permission_title">권한이 필요해요</string>
    <string name="sign_up_profile_permission_description">이 앱은 갤러리 접근 권한이 필요해요.\n앱 세팅으로 이동해서 권한을 부여 할 수 있어요.</string>
    <string name="sign_up_profile_permission_move">이동하기</string>
    <string name="sign_up_profile_permission_cancle">취소하기</string>
    <string name="tv_home_detail_appbar_title">게시글</string>
    <string name="et_home_detail_input">don\'t be master님에게 답글 남기기</string>
    <string name="tv_transparency">투명도 %1$d%% · %2$s</string>
    <string name="tv_transparency_complete">투명도 적용 완료 · %2$s</string>
    <string name="posting_restriction_dialog_title">한동안 글을 쓸 수 없어요 :(</string>
    <string name="posting_restriction_dialog_content">투명도가 -85%까지 떨어졌네요!\n투명도가 회복되기 전까지 글을 쓸 수 없어요.</string>
    <string name="posting_restriction_dialog_caption">*회복 방법은 마이페이지 투명도 툴팁을 확인해보세요.</string>
    <string name="posting_restriction_dialog_btn">확인 했어요</string>
    <string name="tv_comment_appbar_title">답글 달기</string>
    <string name="tv_posting_loading">게시 중...</string>
    <string name="et_comment_hint">님에게 답글 남기기...</string>
    <string name="tv_home_detail_input">님에게 답글 남기기</string>
    <string name="my_page_nickname">don’t be master</string>
    <string name="my_page_description">돈비 커뮤니티를 만드는 수호신입니다.</string>
    <string name="my_page_transperency">투명도</string>
    <string name="my_page_no_feed_text">%s님, 아직 글을 작성하지 않았네요!\n왠지 텅 빈 게시글이 허전하게 느껴져요.</string>
    <string name="my_page_no_feed_first">첫 게시글 남기기</string>
    <string name="my_page_comment_other_not_yet">아직 %s님이 답글을 작성하지 않았어요.</string>
    <string name="my_page_comment_my_not_yet">아직 작성한 답글이 없어요.</string>
    <string name="my_page_other_no_feed_text">아직 %s님이 글을 작성하지 않았어요.</string>
    <string name="my_page_auth_info_appbar">계정 정보</string>
    <string name="my_page_auth_info_social">소셜 로그인</string>
    <string name="my_page_auth_info_version">버전 정보</string>
    <string name="my_page_auth_info_id">아이디</string>
    <string name="my_page_auth_info_date">가입일</string>
    <string name="my_page_auth_info_conditions_title">이용약관</string>
    <string name="my_page_auth_info_conditions_content">자세히보기</string>
    <string name="my_page_auth_info_withdraw_content">계정삭제</string>
    <string name="my_page_auth_withdraw_reason_title">정말 떠나시는 건가요?\n한번 더 생각해보지 않으시겠어요?</string>
    <string name="my_page_auth_withdraw_reason_subtitle">계정을 삭제하시려는 이유를 말씀해주세요.\n제품 개선에 중요한 자료로 활용하겠습니다.</string>
    <string name="my_page_auth_withdraw_reason_content_1">온화하지 못한 내용이 많이 보여요</string>
    <string name="my_page_auth_withdraw_reason_content_2">원하는 콘텐츠가 없어요</string>
    <string name="my_page_auth_withdraw_reason_content_3">필요한 커뮤니티 기능이 없어요</string>
    <string name="my_page_auth_withdraw_reason_content_4">자주 사용하지 않아요</string>
    <string name="my_page_auth_withdraw_reason_content_5">앱 오류가 있어 사용하기 불편해요</string>
    <string name="my_page_auth_withdraw_reason_content_6">가입할 때 사용한 소셜 계정이 바뀔 예정이에요</string>
    <string name="my_page_auth_withdraw_reason_content_7">기타</string>
    <string name="my_page_auth_withdraw_reason_btn_continue">계속</string>
    <string name="my_page_auth_withdraw_guide_title">아래 내용을 확인해주세요!</string>
    <string name="my_page_auth_withdraw_guide_subtitle">계정을 삭제하기 전에 아래 내용을 꼭 확인해주세요!</string>
    <string name="my_page_auth_withdraw_guide_dot">•</string>
    <string name="my_page_auth_withdraw_guide_content_1">회원님의 게시글, 답글, 좋아요 등은 계정 삭제 후에도 자동으로 삭제되지 않으니 미리 확인해 주세요.</string>
    <string name="my_page_auth_withdraw_guide_content_2">계정 삭제 처리된 이메일 아이디는 재가입 방지를 위해 30일간 보존된 후 삭제 처리됩니다.</string>
    <string name="my_page_auth_withdraw_guide_content_3">탈퇴와 재가입을 통해 아이디를 교체하며 선량한 이용자들께 피해를 끼치는 행위를 방지하려는 조치 오니 넓은 양해 부탁드립니다.</string>
    <string name="my_page_auth_withdraw_guide_check">안내사항을 모두 확인하였으며, 이에 동의합니다.</string>
    <string name="my_page_auth_withdraw_guide_btn_delete">계정 삭제하기</string>
    <string name="my_page_auth_withdraw_guide_dialog_content">계정을 삭제하시겠어요?</string>
    <string name="my_page_auth_withdraw_guide_dialog_check">확인</string>
    <string name="my_page_auth_withdraw_guide_image_1">으앗!</string>
    <string name="my_page_auth_withdraw_guide_image_2">님이 떠나면서\n돈비 전체가 조금 더 흐려지고 있어요!\n그럼에도 정말 떠나실 건가요?</string>
    <string name="transparency_info_1_title">투명도가 무엇인가요?</string>
    <string name="transparency_info_1_description">투명도는 돈비 커뮤니티의 온화함을 만들어나가는\n기능으로, 상대의 감정을 반영한 온화 권장 수치예요.</string>
    <string name="transparency_info_2_title">게시글의 투명도 주기 버튼을 클릭하면,</string>
    <string name="transparency_info_2_description">해당 유저가 작성한 모든 게시글, 답글이 -1%씩 점점 투명해지고, 모두에게 투명도가 적용되어 보여져요.</string>
    <string name="transparency_info_3_title">게시글의 투명도 주기 버튼을 클릭하면,</string>
    <string name="transparency_info_3_description">내가 투명도를 적용한 유저들의 활동은\n홈 화면에서 투명하게 보여져요.</string>
    <string name="transparency_info_4_title">투명도가 너무 낮아지면\n활동에 제한이 생겨요.</string>
    <string name="transparency_info_4_description">투명도가 -85%가 된 유저는\n더 이상 게시글과 답글을 작성할 수 없어요.</string>
    <string name="transparency_info_5_title">투명도 적용은 5일간 지속돼요.</string>
    <string name="transparency_info_5_description">투명도는 최근 5일 동안 버튼이 적용된 내용을 반영해요. 5일이 지나면 적용되었던 투명도가 다시 회복돼요.</string>
    <string name="tv_onboarding_skip_introduction">한 줄 소개 나중에 작성하기</string>
    <string name="bottom_sheet_my_page_push_alarm">알림 설정</string>
    <string name="bottom_sheet_my_page_account_info">계정 정보</string>
    <string name="bottom_sheet_my_page_feedback">피드백 남기기</string>
    <string name="bottom_sheet_my_page_customer_service">고객센터</string>
    <string name="bottom_sheet_my_page_logout">로그아웃</string>
    <string name="bottom_sheet_my_page_logout_description">계정에서 로그아웃하시겠어요?</string>
    <string name="my_page_profile_edit">프로필 편집</string>
    <string name="my_page_profile_edit_completed">수정 완료</string>
    <string name="tv_complete_dialog">삭제 완료</string>
    <string name="tv_delete_with_title_complain_dialog">신고하시겠어요?</string>
    <string name="tv_delete_with_title_dialog_content">해당 유저 혹은 게시글을 신고하시려면\n신고하기 버튼을 눌러주세요.</string>
    <string name="tv_delete_with_title_dialog_comment">"해당 유저 혹은 댓글을 신고하시려면\n 신고하기 버튼을 눌러주세요."</string>
    <string name="tv_complaint_title">신고하기</string>
    <string name="tv_delete_title">삭제하기</string>
    <string name="tv_delete_with_title_delete_dialog">게시글을 삭제하시겠어요?</string>
    <string name="tv_delete_with_title_delete_comment_dialog">댓글을 삭제하시겠어요?</string>
    <string name="tv_delete_with_title_delete_content_dialog">삭제된 게시글은 영구히 사라져요.</string>
    <string name="tv_delete_with_title_delete_comment_content_dialog">삭제된 댓글은 영구히 사라져요.</string>
    <string name="error_404">이런!\n현재 요청하신 페이지를 찾을 수 없어요!</string>
    <string name="error_to_home">홈으로 가기</string>
    <string name="btn_transparent_dialog_yes">네, 맞아요</string>
    <string name="tv_transparent_reason_title">투명도 버튼을 눌렀어요.</string>
    <string name="tv_transparent_reason_subtitle">Don’t be의 온화함을 해친다고 생각하셨나요?\n어떤 이유로 누르신 건지 알려주세요!</string>
    <string name="rb_transparent_reason_content_1">누군가를 비하하고 있어요</string>
</resources>