<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/sel_home_drawable_bnv_selected_item"
        android:title="@string/menu_item_home" />
    <item
        android:id="@+id/fragment_posting"
        android:icon="@drawable/sel_posting_drawable_bnv_selected_item"
        android:title="@string/menu_item_posting" />
    <item
        android:id="@+id/fragment_notification"
        android:icon="@drawable/sel_noti_drawable_bnv_selected_item"
        android:title="@string/menu_item_notification" />
    <item
        android:id="@+id/fragment_my_page"
        android:icon="@drawable/sel_my_drawable_bnv_selected_item"
        android:title="@string/menu_item_my" />
</menu>
