<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/appbar_my_page_auth_withdraw_reason"
            layout="@layout/view_appbar_with_back"
            app:title="@{@string/my_page_auth_info_withdraw_content}" />

        <TextView
            android:id="@+id/tv_my_page_auth_withdraw_reason_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="36dp"
            android:text="@string/my_page_auth_withdraw_reason_title"
            android:textAppearance="@style/TextAppearance.DontBe.head_semi_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_my_page_auth_withdraw_reason" />

        <TextView
            android:id="@+id/tv_my_page_auth_withdraw_reason_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/my_page_auth_withdraw_reason_subtitle"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_withdraw_reason_title" />

        <RadioGroup
            android:id="@+id/rg_my_page_auth_withdraw_reason_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_withdraw_reason_subtitle">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_1"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_2"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_3"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_4"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_5"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_6"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_my_page_auth_withdraw_reason_content_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableStart="@drawable/sel_my_page_auth_withdraw_reason_drawable_btn"
                android:drawablePadding="12dp"
                android:text="@string/my_page_auth_withdraw_reason_content_7"
                android:textAppearance="@style/TextAppearance.DontBe.body_regular_16" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_my_page_auth_withdraw_reason_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/sel_sign_up_agree_btn_next"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:paddingVertical="14dp"
            android:text="@string/my_page_auth_withdraw_reason_btn_continue"
            android:textAppearance="@style/TextAppearance.DontBe.body_semi_14"
            android:textColor="@color/gray_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
