<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_onboarding_third_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_onboarding_third_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.DontBe.head_semi_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_onboarding_third_title_gradient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_onboarding_third_title_gradient"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.DontBe.head_semi_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_onboarding_third_title" />

        <ImageView
            android:id="@+id/iv_onboarding_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/content_description_iv_onboarding_third"
            android:src="@drawable/img_onboarding_third"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_onboarding_third_title_gradient" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>