<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.teamdontbe.feature.mypage.authinfo.MyPageAuthInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_1">

        <include
            android:id="@+id/appbar_my_page_auth_info"
            layout="@layout/view_appbar_with_back"
            app:title="@{@string/my_page_auth_info_appbar}" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_social_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/my_page_auth_info_social"
            android:textAppearance="@style/TextAppearance.DontBe.body_semi_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_my_page_auth_info" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_social_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_page_auth_info_social_title"
            tools:text="테스트" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:text="@string/my_page_auth_info_version"
            android:textAppearance="@style/TextAppearance.DontBe.body_semi_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_info_social_title" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_page_auth_info_version_title"
            tools:text="테스트" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:text="@string/my_page_auth_info_id"
            android:textAppearance="@style/TextAppearance.DontBe.body_semi_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_info_version_title" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_id_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_page_auth_info_id_title"
            tools:text="테스트" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:text="@string/my_page_auth_info_date"
            android:textAppearance="@style/TextAppearance.DontBe.body_semi_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_info_id_title" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_date_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_page_auth_info_date_title"
            tools:text="테스트" />

        <View
            android:id="@+id/view_my_page_auth_info_line"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="13dp"
            android:background="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_info_date_title" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_conditions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/my_page_auth_info_conditions_title"
            android:textAppearance="@style/TextAppearance.DontBe.body_semi_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_my_page_auth_info_line" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_conditions_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/my_page_auth_info_conditions_content"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_page_auth_info_conditions_title" />

        <TextView
            android:id="@+id/tv_my_page_auth_info_withdraw_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="27dp"
            android:clickable="true"
            android:text="@string/my_page_auth_info_withdraw_content"
            android:textAppearance="@style/TextAppearance.DontBe.body_regular_14"
            android:textColor="@color/gray_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_auth_info_conditions_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
